apply List.of